<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">pocketweightcheck</string>
    <string name="actionSettings">Settings</string>

    
    <string name="weightEntryMessage">Please enter weight in KG</string>
    <string name="weightEntryDateMessage">When was this sample taken?</string>
    <string name="dateLabel">Date</string>
    <string name="weightLabel">Weight</string>
    <string name="weightEntryDialogTitle">Weight entry</string>

    <string name="msgSaved">saved</string>
    <string name="msgTooLight">implausible weight - too light!</string>
    <string name="msgTooHeavy">implausible weight - too heavy!</string>
    <string name="msgInvalid">please enter a number</string>
    <string name="msgTooOld">measurement is too old!</string>
    <string name="msgFuture">measurement cannot be in the future</string>
    <string name="msgError">Sorry, an error occurred</string>
    <string name="msgNoData">Not enough data yet...</string>
    <string name="msgLatestWeight">Latest weight</string>
    <string name="msgMaxWeight">Maximum weight</string>
    <string name="msgMinWeight">Minimum weight</string>
    <string name="msgBmi">BMI</string>
    <string name="msgTrend">trend</string>
    <string name="msgBmiNotAvailable">BMI not available - did you enter your height?</string>
    <string name="msgPrefsTargetWeight">Target weight in KG</string>
    <string name="msgPrefsHeight">Your height in Metres</string>
    
    <string-array name="bmiCategory">
        <item>Very severely underweight</item>
        <item>Severely underweight</item>
        <item>Underweight</item>
        <item>Normal (healthy weight)</item>
        <item>Overweight</item>
        <item>Obese Class I (Moderately obese)</item>
        <item>Obese Class II (Severely obese)</item>
        <item>Obese Class III (Very severely obese)</item> 	
    </string-array>

    <string-array name="trendCategory">
        <item>Not available</item>
        <item>Making progress!</item>
        <item>Stable</item>
        <item>Action needed!</item>
    </string-array>
</resources>
