<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/mainActivity"
    android:background="#FF000000">

    <!-- graphs and stats -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/statsLayout" 
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="250dip"
            android:orientation="vertical"
            android:id="@+id/graphLayout"/>

        <!-- table of stats -->        
        <TableLayout 
            android:id="@+id/statsLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">
        
            <!-- latest weight -->    
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
                <TextView
                    android:text="@string/msgLatestWeight"/>                
                <TextView
                    android:id="@+id/latestWeightValue"
                    android:text="latestWeightValue"/>
                <TextView
                    android:id="@+id/latestWeightDate"
                    android:text="latestWeightDate"/>
            </TableRow>
            
            <!-- min weight -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">
                <TextView
                    android:text="@string/msgMinWeight"/>
                <TextView
                    android:id="@+id/minWeightValue"
                    android:text="minWeight"/>
                <TextView
                    android:id="@+id/minWeightDate"
                    android:text="minWeight"/>
                
            </TableRow>
            
            <!-- max weight -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
                <TextView
                    android:text="@string/msgMaxWeight"/>
                <TextView
                    android:id="@+id/maxWeightValue"
                    android:text="maxWeightValue"/>
                <TextView
                    android:id="@+id/maxWeightDate"
                    android:text="maxWeightDate"/>

                
            </TableRow>
            
            <!-- BMI -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
                <TextView
                    android:text="@string/msgBmi"/>                                
                <TextView
                    android:id="@+id/bmiValue"
                    android:text="bmiValue"/>
                <TextView
                    android:id="@+id/bmiCategory"
                    android:text="bmiCategory"/>             
            </TableRow>

            <!-- trend -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
                <TextView
                    android:text="@string/msgTrend"/>
                <TextView
                    android:id="@+id/trendValue"
                    android:text="trendValue"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    
    <!-- not enough data yet -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/noDataLayout" 
        android:orientation="vertical">
        <TextView
            android:id="@+id/noDataMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgNoData" />
    </LinearLayout>
</LinearLayout>
